fix random padding on ios safari, toggle now flips

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -61,6 +61,10 @@
     margin-bottom: 48px;
   }
 
+  .toggle.active {
+    transform: rotate(180deg);
+  }
+
   .mobileNav > a {
     height: 48px;
     width: 100%;
